###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""small-db-v2 is an experimental project for studying of ACID / Distributed ACID"""

# ================================================================================ #
# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
# ================================================================================ #
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# ====================================================================================== #
# external dependencies
#
# Note that the library path is different when using WORKSPACE and MODULE.bazel.
# When importing the external library "liburing" using WORKSPACE, the library path is:
#   "bazel-<workspace-name>/external/liburing"
# With MODULE.bazel (Bazlmod), the path becomes:
#   "bazel-<workspace-name>/external/_main~_repo_rules~liburing"
# ====================================================================================== #
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# A generic content for all http_archive rules.
_ALL_CONTENT = """\
filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive(
    name = "spdlog",
    build_file_content = _ALL_CONTENT,
    strip_prefix = "spdlog-1.15.0",
    urls = ["https://github.com/gabime/spdlog/archive/refs/tags/v1.15.0.tar.gz"],
    integrity = "sha256-mWJkjJtPGnu8dv2NkXJVW60Ycf2xT/T4Qu+HlJaCyqU=",
)

bazel_dep(name = "rules_foreign_cc", version = "0.13.0")

# ====================================================================================== #
# custom toolchains
# ====================================================================================== #
bazel_dep(
    name = "platforms",
    version = "0.0.10",
)

register_toolchains(
    "//toolchain:xc_toolchain_clang20",
)
